# serenity

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gn  .mailmap  .pre-commit-config.yaml  .prettierignore  .prettierrc  .travis.yml  .ycm_extra_conf.py  Banner.txt  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributing.md  Documentation.md  FAQ.md  INSTALL.md  LICENSE  LICENSE.md  Makefile  Makefile.common  Makefile.subdir  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.zh-CN.md  ReadMe.md  SECURITY.md  azure-pipelines.yml  (+17 more)
AK/Tests/: .gitignore  4chan_catalog.json  BenchmarkRegex.cpp  CMakeLists.txt  Makefile  Span.cpp  TestAllOf.cpp  TestAnyOf.cpp  TestArray.cpp  TestAtomic.cpp  TestBadge.cpp  TestBase64.cpp  TestBinaryHeap.cpp  TestBinarySearch.cpp  TestBitCast.cpp  TestBitmap.cpp  TestByteBuffer.cpp  TestChecked.cpp  TestCircularDeque.cpp  TestCircularDuplexStream.cpp  TestCircularQueue.cpp  TestComplex.cpp  TestDemangle.cpp  TestDistinctNumeric.cpp  TestDoublyLinkedList.cpp  TestEndian.cpp  TestEnumBits.cpp  TestFileSystemPath.cpp  TestFind.cpp  TestFixedArray.cpp  TestFloatToDigits.cpp  TestFormat.cpp  TestGenericLexer.cpp  TestHashFunctions.cpp  TestHashMap.cpp  TestHashTable.cpp  TestHelpers.h  TestHex.cpp  TestIPv4Address.cpp  TestIndexSequence.cpp  (+38 more)
Applications/: CMakeLists.txt  Makefile  Makefile.common
Applications/About/: .gitignore  CMakeLists.txt  Makefile  main.cpp
Applications/Browser/: BookmarksBarWidget.cpp  BookmarksBarWidget.h  Browser.h  BrowserConsoleClient.cpp  BrowserConsoleClient.h  BrowserWindow.gml  BrowserWindow.json  CMakeLists.txt  ConsoleWidget.cpp  ConsoleWidget.h  DownloadWidget.cpp  DownloadWidget.h  History.cpp  History.h  InspectorWidget.cpp  InspectorWidget.h  Makefile  NetworkHistoryWidget.cpp  NetworkHistoryWidget.h  Tab.cpp  Tab.gml  Tab.h  Tab.json  WindowActions.cpp  WindowActions.h  main.cpp
Applications/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorWidget.cpp  CalculatorWidget.h  CalculatorWindow.gml  Keypad.cpp  Keypad.h  Makefile  Token.cpp  Token.h  TokenStream.cpp  TokenStream.h  main.cpp
Applications/Calendar/: AddEventDialog.cpp  AddEventDialog.h  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarWidget.cpp  CalendarWidget.h  Makefile  main.cpp
Applications/ChanViewer/: BoardListModel.cpp  BoardListModel.h  CMakeLists.txt  Makefile  ThreadCatalogModel.cpp  ThreadCatalogModel.h  main.cpp
Applications/ChessEngine/: ChessEngine.cpp  ChessEngine.h
Applications/Clock/: ClockWidget.cpp  ClockWidget.h  Makefile  main.cpp
Applications/CrashDaemon/: CMakeLists.txt  main.cpp
Applications/CrashReporter/: CrashReporterWindow.gml  main.cpp
Applications/Debugger/: DebugSession.cpp  DebugSession.h  Makefile  main.cpp
Applications/DisplayProperties/: CMakeLists.txt  DisplayProperties.cpp  DisplayProperties.h  ItemListModel.h  Makefile  MonitorWidget.cpp  main.cpp
Applications/DisplaySettings/: CMakeLists.txt  DisplaySettings.cpp  DisplaySettings.h  DisplaySettingsWindow.gml  ItemListModel.h  Makefile  MonitorWidget.cpp  MonitorWidget.h  main.cpp
Applications/Downloader/: .gitignore  Makefile  main.cpp
Applications/FileManager/: .gitignore  CMakeLists.txt  DesktopWidget.h  DirectoryModel.cpp  DirectoryModel.h  DirectoryTableModel.cpp  DirectoryTableModel.h  DirectoryTableView.cpp  DirectoryTableView.h  DirectoryView.cpp  DirectoryView.h  FileManagerWindow.gml  Makefile  (+6 more)
Bootloader/: BootInfo.h  CMakeLists.txt  UBSanitizer.cpp  boot.S  init.cpp  linker.ld
Kernel/: .bochsrc  .gitignore  ARP.h  ARPPacket.h  AddressSanitizer.cpp  AddressSanitizer.h  Alarm.h  Assertions.cpp  Assertions.h  AtomicEdgeAction.h  BXVGADevice.cpp  BXVGADevice.h  BlockDevice.cpp  BlockDevice.h  BochsVGADevice.cpp  BochsVGADevice.h  BootInfo.h  CMOS.cpp  CMOS.h  CMakeLists.txt  CharacterDevice.cpp  CharacterDevice.h  CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  ConsoleDevice.cpp  ConsoleDevice.h  CoreDump.cpp  CoreDump.h  Coredump.cpp  Coredump.h  CoredumpFile.cpp  CoredumpFile.h  CrashHandler.cpp  Credentials.cpp  Credentials.h  DMI.cpp  DMI.h  DataBuffer.cpp  (+283 more)
Ladybird/: .gitignore  AndroidPlatform.cpp  AudioCodecPluginLadybird.cpp  AudioCodecPluginLadybird.h  AudioThread.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  ConsoleClient.cpp  ConsoleClient.h  ConsoleGlobalObject.cpp  ConsoleGlobalObject.h  ConsoleWidget.cpp  ConsoleWidget.h  CookieJar.cpp  CookieJar.h  DOMNodeProperties.h  EventLoopImplementationQt.cpp  EventLoopImplementationQt.h  EventLoopImplementationQtEventTarget.cpp  EventLoopImplementationQtEventTarget.h  EventLoopPluginQt.cpp  EventLoopPluginQt.h  FontPlugin.cpp  FontPlugin.h  FontPluginLadybird.cpp  FontPluginLadybird.h  FontPluginQt.cpp  FontPluginQt.h  HelperProcess.cpp  HelperProcess.h  History.cpp  History.h  HistoryWidget.cpp  HistoryWidget.h  ImageCodecPlugin.cpp  ImageCodecPlugin.h  ImageCodecPluginLadybird.cpp  ImageCodecPluginLadybird.h  Info.plist  (+46 more)
Lagom/: .gitignore  CMakeLists.txt  SimpleIPC.ipc  SimpleIPCClient.cpp  SimpleIPCServer.cpp  TestApp.cpp
Libraries/: CMakeLists.txt
Services/: CMakeLists.txt  Makefile
Shell/: .gitignore  AST.cpp  AST.h  Builtin.cpp  CMakeLists.txt  Execution.h  Formatter.cpp  Formatter.h  Forward.h  GlobalState.h  ImmediateFunctions.cpp  ImmediateFunctions.h  Job.cpp  Job.h  LineEditor.cpp  LineEditor.h  Makefile  NodeVisitor.cpp  NodeVisitor.h  Parser.cpp  Parser.h  Shell.cpp  Shell.h  main.cpp
Tests/: CMakeLists.txt
Userland/: .gitignore  AFLaunch.cpp  CMakeLists.txt  Makefile  adjtime.cpp  al.cpp  allocate.cpp  aplay.cpp  arp.cpp  avol.cpp  base64.cpp  basename.cpp  beep.cpp  bt-announce.cpp  bt-info.cpp  bt-scrape.cpp  cal.cpp  cat.cpp  checksum.cpp  chgrp.cpp  chmod.cpp  chown.cpp  chroot.cpp  clear.cpp  copy.cpp  cp.cpp  crash.cpp  cut.cpp  date.cpp  df.cpp  dirname.cpp  disasm.cpp  disk_benchmark.cpp  dmesg.cpp  dmidecode.cpp  du.cpp  echo.cpp  entr.cpp  env.cpp  expr.cpp  (+125 more)
(+87398 files in other folders)
