add_subdirectory(About)
add_subdirectory(Browser)
add_subdirectory(Calculator)
add_subdirectory(Calendar)
add_subdirectory(Debugger)
add_subdirectory(DisplaySettings)
add_subdirectory(FileManager)
add_subdirectory(FontEditor)
add_subdirectory(Help)
add_subdirectory(HexEditor)
add_subdirectory(IRCClient)
add_subdirectory(KeyboardMapper)
add_subdirectory(KeyboardSettings)
add_subdirectory(Piano)
add_subdirectory(PixelPaint)
add_subdirectory(QuickShow)
add_subdirectory(SoundPlayer)
add_subdirectory(Spreadsheet)
add_subdirectory(SystemMonitor)
add_subdirectory(ThemeEditor)
add_subdirectory(Terminal)
add_subdirectory(TextEditor)
add_subdirectory(Welcome)
